# physics_playground

./: .gitignore  CMakeLists.txt  conanfile.txt
common/: CMakeLists.txt
common/data/: benchmark.json
common/include/: application_2d.h  big_matrix.h  big_vector.h  blas_forwards.h  c_debug.h  collision_handler.h  component_2d.h  contact.h  fix_memory_allocator.h  grid_point_generator2d.h  linear_systems.h  matrix.h  model.h  model2d.h  multi_threaded_solver_2d.h  particle.h  particle_emitter.h  point_generator2d.h  point_generators.h  point_particle_emitter2d.h  preconditioner.h  profile.h  sdf2d.h  serializer.h  snap.h  solver2d.h  spacial_hash.h  sparse_matrix.h  test_matrix_generator.h  types.h  volume_emitter_2d.h  world2d.h
common/include/emitter/: emitter.h  point_emitter.h  volume_emitter.h
common/include/generator/: point_generator.h  point_generator2d.h  triangle_point_generator2d.h
common/include/gpu/: gpu_spacial_hash.h
common/include/sph/: sph.h  sph_sim.h  sph_solver.h
common/include/thread_pool/: thread_pool.hpp
common/src/: World2D.cpp  application_2d.cpp  contact.cpp  grid_point_generator2d.cpp  point_generator2d.cpp  point_particle_emitter2d.cpp  serializer.cpp  sph_sim.cpp  triangle_point_generator2d.cpp  volume_emitter_2d.cpp
common/test/: convergence_test.cpp  gph_hash_test.cpp  grid_contact_generator_test.cpp  linear_systems_fixture.h  linear_systems_test.cpp  matrix_test.cpp  particle_separate_field_type.cpp  particle_type_fixture.h  particle_type_test.cpp  preconditioner_test.cpp  spacial_hash_fixture.h  spacial_hash_test.cpp  sph_kernel_test.cpp
physics/: CMakeLists.txt  main.cpp
profiling/: CMakeLists.txt  main.cpp  (+5 more)
(+52 files in other folders)
